package service

import (
	"context"
	pb "github.com/go-saas/kit/product/api/product/v1"
)

func (s *ProductService) CreateInternalProduct(ctx context.Context, req *pb.CreateInternalProductRequest) (*pb.Product, error) {
	//TODO implement me
	panic("implement me")
}

func (s *ProductService) GetInternalProduct(ctx context.Context, req *pb.GetInternalProductRequest) (*pb.Product, error) {
	//TODO implement me
	panic("implement me")
}

func (s *ProductService) UpdateInternalProduct(ctx context.Context, req *pb.UpdateInternalProductRequest) (*pb.Product, error) {
	//TODO implement me
	panic("implement me")
}

func (s *ProductService) DeleteInternalProduct(ctx context.Context, req *pb.DeleteInternalProductRequest) (*pb.DeleteInternalProductReply, error) {
	//TODO implement me
	panic("implement me")
}
